# web-ssh-client

./: CHANGELOG.md  README.md  architecture.md  implementation_plan.md  mise.toml
.clinerules/: 01-basic.md  03-architecture.md  04-develop.md
.moon/: workspace.yml
.roo/: 02-documentation.md
.roo/rules/: 01-basic.md  03-architecture.md
be/: .gitignore  asgi.py  consumers.py  db.sqlite3  moon.yml  poetry.toml  pyproject.toml  routing.py
be/be/: admin.py  asgi.py  consumers.py  models.py  settings.py  urls.py  views.py
be/be/migrations/: 0001_initial.py  0002_server.py  0002_server_proxy_server.py  0003_role_userrole_permission.py  0004_remove_permission_server_name_and_more.py  0005_delete_permission.py  0006_role_permissions.py  0007_remove_userrole_role_userrole_roles.py
be/be_project/: asgi.py  settings.py  urls.py  wsgi.py
be/ssh_manager/: models.py  serializers.py  urls.py  views.py
fe/: index.html  moon.yml  package-lock.json  package.json  vite.config.js
fe/src/: App.vue  config.js  main.js
fe/src/components/: ConnectServerPage.vue  Homepage.vue  LoginPage.vue  ManagePermissions.vue  ManageSSHKeys.vue  ManageServerList.vue  ManageServers.vue  Notification.vue  SummaryPage.vue  TerminalPage.vue  UploadSSHKey.vue
