[project]
name = "be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels>=4.2.2",
    "cryptography>=44.0.2",
    "django>=5.2.0,<5.3.0",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "paramiko>=3.5.1",
    "uvicorn[standard]>=0.34.2",
]
